--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
 
     <!-- Arquivos CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <style>
-        #btnsIniciais {
-            text-align: center;
-        }
-    </style>
 </head>
 
 <body>
 
     <div id="container">
+        <div id="textoInicial">
+            <h1>Evolução dos Paraguaios em meio ao Estocolmo</h1>
+
+            <p>
+                A síndrome de Estocolmo em raízes de 169 fez com que, grande parte da população de paraguaios
+                ocupantes da cidade de macagafos na Tanzânia, passassem por uma grande mudança, já que tal
+                síndrome é dada ao caso de a atmosfera da terra não barrar raios solares de maior frequência,
+                ocasionando a morte de animais não tolerantes a luz, forçando assim os mesmos a passarem por N
+                mutações e expressivas mudanças em seus corpos.
+            </p>
+        </div>
         <div id="btnsIniciais">
-            <button class="button-white">DARWIN</button>
-            <button class="button-white">LAMARK</button>
+            <a href="darwin.html" class="button-white">DARWIN</a>
+            <a href="lamark.html" class="button-white">LAMARK</a>
         </div>
     </div>
 
