Inserção de ícones e correção textual

--- a/darwin.html
+++ b/darwin.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evolução</title>
+    <title>Estocolmo</title>
+
+    <!-- icone -->
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/bird.ico" />
 
     <!-- Arquivos CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,14 +18,28 @@
 
     <div id="container">
         <div id="textoInicial">
-            <h1>Darwin</h1>
+            <div class="parent">
+                <div class="child">
+                    <img src="assets/img/darwin.png" class="icone" />
+                </div>
+                <div class="child">
+                    <h1>
+                        Darwin
+                    </h1>
+                </div>
+            </div>
 
             <p>
-                Por Darwin Temos que, a seleção natural é hereditária, e que os pais tendem a morrer, ou deixam de se
-                reproduzir, para dar lugar às novas gerações mais evoluídas, o que faz mais sentido e é mais fácil de
-                ser explicada, já que é mais atual, e para muitos a origem de tudo que se acredita hoje, Por Darwin
-                teríamos que às gerações faríam que os animais se adaptem a tal necessidade, fazendo assim que tais
-                animais morreríam para dar lugar aos seus filhos mais evoluídos, e aptos a reproduzir.
+                Por Darwin temos, a seleção natural, os Paraguaios mais bem adaptados a certo ambiente tivesse maiores
+                chances de sobrevivência, e deixando descendentes cada vez mais aptos, o que faz mais sentido e é mais
+                fácil de ser explicada, já que é mais atual, e para muitos a origem de tudo que se acredita hoje.
+            </p>
+
+            <p>
+                Diante disso teríamos que às gerações fariam com que os Paraguaios se adaptassem a tal necessidade,
+                fazendo assim os que tivessem cifosismo que faz o mesmo ter uma coloração mais clara morressem, por não
+                serem aptos ao evento de Estocolmo, para dar lugar aos que possuíssem uma cor mais escura, seus filhos
+                mais evoluídos e aptos a reproduzir.
             </p>
         </div>
     </div>
