--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evolução</title>
+
+    <title>Estocolmo</title>
+
+    <!-- icone -->
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/bird.ico" />
 
     <!-- Arquivos CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,21 +19,34 @@
 
     <div id="container">
         <div id="textoInicial">
-            <h1>Evolução dos Paraguaios em meio ao Estocolmo</h1>
+            <div class="parent">
+                <div class="child">
+                    <img src="assets/img/bird.png" class="icone" />
+                </div>
+                <div class="child">
+                    <h1>
+                        Evolução dos Paraguaios em meio ao Estocolmo
+                    </h1>
+                </div>
+            </div>
 
             <p>
-                A síndrome de Estocolmo em raízes de 169 fez com que, grande parte da população de paraguaios
-                ocupantes da cidade de macagafos na Tanzânia, passassem por uma grande mudança, já que tal
-                síndrome é dada ao caso de a atmosfera da terra não barrar raios solares de maior frequência,
-                ocasionando a morte de animais não tolerantes a luz, forçando assim os mesmos a passarem por N
-                mutações e expressivas mudanças em seus corpos.
+                O evento de Estocolmo em meados de 1969 fez com que, grande parte da população de paraguaios ocupantes
+                da cidade de Macagafos na Tanzânia, passassem por uma grande mudança, já que tal evento é dado ao caso
+                da da atmosfera terrestre não barrar raios solares de maior incidência, ocasionando a morte de
+                Paraguaios não tolerantes a esta incidência solar, forçando assim que os mesmos passassem por N mutações
+                e expressivas mudanças em seus corpos.
             </p>
+
+            <br>
         </div>
         <div id="btnsIniciais">
             <a href="darwin.html" class="button-white">DARWIN</a>
-            <a href="lamark.html" class="button-white">LAMARK</a>
+            <a href="lamark.html" class="button-white">LAMARCK</a>
         </div>
     </div>
+
+    <br><br><br><br><br><br>
 
 </body>
 
