--- a/lamark.html
+++ b/lamark.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evolução</title>
+    <title>Estocolmo</title>
+
+    <!-- icone -->
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/bird.ico" />
 
     <!-- Arquivos CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,26 +18,34 @@
 
     <div id="container">
         <div id="textoInicial">
-            <h1>Lamark</h1>
+            <div class="parent">
+                <div class="child">
+                    <img src="assets/img/lamark.png" class="icone" />
+                </div>
+                <div class="child">
+                    <h1>
+                        Lamarck
+                    </h1>
+                </div>
+            </div>
 
             <p>
-                Temos por Lamarck que todos animais mais suscetíveis a mudança, tais como as girafas entre outros,
-                ultrapassam a barreira da necessidade e forçam a mudar, para sobreviver, assim como é possível
-                reparar neste grupo de paraguaios. Podemos ver por essa foto que, os animais estão se adaptando
+                Temos por Lamarck que todos animais são suscetíveis a mudança, tais como as girafas entre outros,
+                fazendo que ultrapassam a barreira da necessidade, e se forçam a mudar para sobreviver, assim como é
+                possível reparar neste grupo de paraguaios. Podemos ver por essa foto que, os animais estão se adaptando
                 para que sobrevivam.
             </p>
 
-            <img src="assets/img/paraguaio.png">
+            <img src="assets/img/paraguaio.png" class="paraguaio">
 
             <p>
-                Passando da cor amarela, vulgo cifosismo que faz com que o animal tenha redução de 100% de melanina, o
-                paraguaio ao lado já apresenta uma tonalidade diferente, como se estivesse escurecendo para enfrentar as
-                incidências solares maiores, curiosamente filha do paraguaio mais à frente. Temos então por fim, a
-                versão final de um animal evoluído, que iremos chamar de gabshow, onde a melanina presente no mesmo é a
-                necessária para boa sobrevivência.
+                Passando da cor amarela, vulgo cifosismo que faz com que o animal tenha uma grande redução da sua
+                melanina, para sobreviver eles vão escurecendo sua coloração para enfrentar as incidências solares
+                maiores. Temos então por fim, a versão final de um animal evoluído, que iremos chamar de Gabshow, onde a
+                melanina presente no mesmo é a necessária para a boa sobrevivência.
             </p>
-            
-            <img src="assets/img/gabshow.png">
+
+            <img src="assets/img/gabshow.png" class="paraguaio">
         </div>
     </div>
 
