--- a/darwin.html
+++ b/darwin.html
@@ -37,8 +37,8 @@
 
             <p>
                 Diante disso teríamos que às gerações fariam com que os Paraguaios se adaptassem a tal necessidade,
-                fazendo assim os que tivessem cifosismo que faz o mesmo ter uma coloração mais clara morressem, por não
-                serem aptos ao evento de Estocolmo, para dar lugar aos que possuíssem uma cor mais escura, seus filhos
+                fazendo assim os que tivessem <a href="cifosismo.html" class="link-referencia">cifosismo</a> que faz o mesmo ter uma coloração mais clara morressem, por não
+                serem aptos ao evento de <a href="estocolmo.html" class="link-referencia">Estocolmo</a>, para dar lugar aos que possuíssem uma cor mais escura, seus filhos
                 mais evoluídos e aptos a reproduzir.
             </p>
         </div>
