--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <p>
-                O evento de Estocolmo em meados de 1969 fez com que, grande parte da população de paraguaios ocupantes
+                O evento de <a href="estocolmo.html" class="link-referencia">Estocolmo</a> em meados de 1969 fez com que, grande parte da população de paraguaios ocupantes
                 da cidade de Macagafos na Tanzânia, passassem por uma grande mudança, já que tal evento é dado ao caso
                 da da atmosfera terrestre não barrar raios solares de maior incidência, ocasionando a morte de
                 Paraguaios não tolerantes a esta incidência solar, forçando assim que os mesmos passassem por N mutações
