--- a/lamark.html
+++ b/lamark.html
@@ -39,7 +39,7 @@
             <img src="assets/img/paraguaio.png" class="paraguaio">
 
             <p>
-                Passando da cor amarela, vulgo cifosismo que faz com que o animal tenha uma grande redução da sua
+                Passando da cor amarela, vulgo <a href="cifosismo.html" class="link-referencia">cifosismo</a> que faz com que o animal tenha uma grande redução da sua
                 melanina, para sobreviver eles vão escurecendo sua coloração para enfrentar as incidências solares
                 maiores. Temos então por fim, a versão final de um animal evoluído, que iremos chamar de Gabshow, onde a
                 melanina presente no mesmo é a necessária para a boa sobrevivência.
