--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     
     <!-- Apenas um teste -->
 
+    <a href="colaboradores.html" class="link-footer">
+        <span>Colaboradores</span>
+    </a>
+
 </body>
 
 </html>
