Excluindo link de colaboradores em dispositivos móveis

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
     <!-- Apenas um teste -->
 
-    <a href="colaboradores.html" class="link-footer">
+    <a id="colaboradoreslink" href="colaboradores.html" class="link-footer">
         <span>Colaboradores</span>
     </a>
 
