--- a/estocolmo.html
+++ b/estocolmo.html
@@ -31,7 +31,7 @@
             </div>
 
             <p>
-                Estocolmo é um evento em que a atmosfera terrestre para de projetar os seres dos raios solares de maior incidência, causando problemas de saúde quando se tem uma baixa melanina.
+                Estocolmo é um evento em que a atmosfera terrestre para de proteger os seres dos raios solares de maior incidência, causando problemas de saúde quando se tem uma baixa melanina.
             </p>
 
             <br>
